fixed a transperant pixel line that sowed up on mobile devices, lazyloader

--- a/_sass/_projectLayout.scss
+++ b/_sass/_projectLayout.scss
@@ -4,9 +4,9 @@
 
   .gallery {
     .swiper-slide {
-      box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
       .swiper-lazy-preloader {
         background-color: #232323;
+        box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
         width: 100%;
         height: 100%;
         position: absolute;
@@ -31,7 +31,7 @@
         }
       }
       img {
-        box-shadow: none;
+        box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
       }
     }
   }
